--- a/html/index.html
+++ b/html/index.html
@@ -106,61 +106,66 @@
         <img src="imagenes/avion.png" alt="">
     </section>
 
+
+
+
+
+
     <section id="letraO" class="letra-section">
         <h2>O</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/O.PNG" alt="">
     </section>
 
     <section id="letraP" class="letra-section">
         <h2>P</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/P.PNG" alt="">
     </section>
 
     <section id="letraQ" class="letra-section">
         <h2>Q</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/Q.PNG" alt="">
     </section>
 
     <section id="letraR" class="letra-section">
         <h2>R</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/R.PNG" alt="letra-section">
     </section>
 
     <section id="letraS" class="letra-section">
         <h2>S</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/S.PNG" alt="">
     </section>
 
     <section id="letraT" class="letra-section">
         <h2>T</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/T.PNG" alt="">
     </section>
 
     <section id="letraU" class="letra-section">
         <h2>U</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/U.PNG" alt="">
     </section>
 
     <section id="letraV" class="letra-section">
         <h2>V</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/V.PNG" alt="">
     </section>
     <section id="letraW" class="letra-section">
         <h2>W</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/W.PNG" alt="">
     </section>
 
     <section id="letraX" class="letra-section">
         <h2>X</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/X.PNG" alt="">
     </section>
     <section id="letraY" class="letra-section">
         <h2>Y</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/Y.PNG" alt="">
     </section>
     <section id="letraZ" class="letra-section">
         <h2>Z</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/Z.PNG" alt="">
     </section>
 
 
