--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -43,72 +44,73 @@
     <!-- Secciones por letra -->
     <section id="letraA" class="letra-section">
         <h2>A</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/A.PNG" alt="">
     </section>
 
     <section id="letraB" class="letra-section">
         <h2>B</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/B.PNG" alt="">
     </section>
 
     <section id="letraC" class="letra-section">
         <h2>C</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/" alt="">
     </section>
 
     <section id="letraD" class="letra-section">
         <h2>D</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/D.PNG" alt="">
     </section>
 
     <section id="letraE" class="letra-section">
         <h2>E</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/E.PNG" alt="">
     </section>
 
     <section id="letraF" class="letra-section">
         <h2>F</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/F.PNG" alt="">
     </section>
 
     <section id="letraG" class="letra-section">
         <h2>G</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/G.PNG" alt="">
     </section>
 
     <section id="letraH" class="letra-section">
         <h2>H</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/H.PNG" alt="">
     </section>
 
     <section id="letraI" class="letra-section">
         <h2>I</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/I.PNG" alt="">
     </section>
 
     <section id="letraJ" class="letra-section">
         <h2>J</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/J.PNG" alt="">
     </section>
 
     <section id="letraK" class="letra-section">
         <h2>K</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src=images/#letraK alt="">
     </section>
 
     <section id="letraL" class="letra-section">
         <h2>L</h2>
-        <img src="imagenes/ballena.png" alt="">
+        <img src="/images/L.PNG" alt="">
     </section>
 
     <section id="letraM" class="letra-section">
         <h2>M</h2>
-        <img src="imagenes/avion.png" alt="">
+        <img src="/images/M.PNG" alt="">
     </section>
 
-
-
-
+    <section id="letraM" class="letra-section">
+        <h2>M</h2>
+        <img src="/images/N.PNG" alt="">
+    </section>
 
 
     <section id="letraO" class="letra-section">
