--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
 
     <section id="letraC" class="letra-section">
         <h2>C</h2>
-        <img src="/images/" alt="">
+        <img src="/images/C.PNG" alt="">
     </section>
 
     <section id="letraD" class="letra-section">
